--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" date="2015-06-03T10:11:09Z" product-name="extensionusagefinder">
+    <file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2015-06-03T10:11:09Z" product-name="extensionusagefinder">
         <header/>
         <body>
             <trans-unit id="tx_extensionusagefinder_domain_model_finder">
-                <source>Finder</source>
+                <target>Finder</target>
             </trans-unit>
             
             <trans-unit id="view.button.find">
-                <source>Find</source>
+                <target>Finden</target>
             </trans-unit>
             
             <trans-unit id="view.matches">
-                <source>Matches</source>
+                <target>Treffer</target>
             </trans-unit>
         </body>
     </file>
