--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -6,18 +6,18 @@
             <trans-unit id="tx_extensionusagefinder_domain_model_finder">
                 <source>Finder</source>
             </trans-unit>
-            
+
             <trans-unit id="view.button.find">
                 <source>Find</source>
             </trans-unit>
             <trans-unit id="view.form.showDeleted">
                 <source>Show deleted elements</source>
             </trans-unit>
-            
+
             <trans-unit id="view.header.name">
-                <source>Extension Usage Finder</source>
+                <source>Extension Usage Finder by Steve Lenz</source>
             </trans-unit>
-            
+
             <trans-unit id="view.finder.index.matches">
                 <source>Matches</source>
             </trans-unit>
@@ -81,7 +81,7 @@
             <trans-unit id="view.finder.index.extensionInfo.constraints.suggests">
                 <source>Suggestes</source>
             </trans-unit>
-            
+
         </body>
     </file>
 </xliff>
